--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@buccaneerai/rxjs-streams",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "description": "🐠 RxJS operators and utilities for worth with streams (node.js ReadableStream, pipes, etc.)",
   "main": "dist/index.js",
   "repository": "https://github.com/buccaneerai/rxjs-streams.git",
@@ -25,8 +25,7 @@
   },
   "dependencies": {
     "lodash": "^4.17.20",
-    "rxjs": "^6.6.3",
-    "rxjs-stream": "^3.2.1"
+    "rxjs": "^6.6.3"
   },
   "devDependencies": {
     "@babel/cli": "^7.12.13",
@@ -37,6 +36,7 @@
     "@babel/register": "^7.12.13",
     "chai": "^4.2.0",
     "commander": "^7.0.0",
+    "csv-parse": "^5.0.4",
     "mocha": "^8.2.1",
     "rxjs-marbles": "^6.0.1",
     "sinon": "^9.2.4"
